--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.5",
+    "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-table": "^8.10.4",
     "@types/bcrypt": "^5.0.2",
@@ -34,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.4.1",
     "react-select": "^5.9.0",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
